--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome</h1>
+    <header>
+        <h1>My header</h1>
+        <p>Lorem Lorem Lorem Lorem Lorem Lorem Lorem</p>
+    </header>
 </body>
 </html>
